-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2012-03-11	remko
	* test/functions.sh.cmake test/*/*.sh test/CMakeLists.txt:
				Changed so that testing occurs in build directory without copying
				files.
	* test/*/orig/*.ps:	Moved to test/*/*.ps

2012-03-07	pwessel
	* psbasemap.c:		The -Tm option now places degree symbols.  Changed default magnetic
				declination annotation interval from 10 to 30.

2012-03-03	fwobbe
	*			Reintegrated branch cmake-build back into the trunk
	*			Tagged release 5.0.0 (before reintegration into trunk)

2012-02-25	pwessel
	* *.c:		Did not consistently use COL_SEPARATOR and/or FORMAT_FLOAT_OUT for ascii output.

2012-02-22	pwessel
	* gmt_support.c:	gmt_inonout_sphpol_count did not properly handle line segments
				that were exactly vertical in all cases, leading to errors as
				to a point being inside or outside a spherical polygon.  Also,
				points exactly on a vertical segment were not flagged as being
				ON the line but INSIDE. Added test/grdmask/sphinout.sh as check.

2012-02-17	pwessel
	* gmt_io.c:		Added convenience function GMT_set_segmentheader to change
				multi-seg header output to on or off; used by several GMT programs.
	* grdtrack.c:		Did not turn on multi-segment output for -C when input was not
				a multi-segment file.

2012-02-15	pwessel
	* grdproject.c:		Changed header inc but not r_inc.

2012-02-14	remko
	* GNUmakefile, configure.ac:	Split off triangle code again into gmt-${version}-non-gpl.tar.bz2

2012-02-13	pwessel
	* gmt_proj.c:		Determine if N or S polar for conic projections by looking at the
				selected region, not the central point [D. Scheirer report 2/9/2012].

2012-02-10	fwobbe
	* gmt_prototypes.h, gmt_io.c, gmt_support.c, gmtapi_util.c, ps2raster.c:
				Function enhancements to better deal with CR and LF:
				GMT_fgets GMT_chop GMT_chop_ext GMT_trim_segheader.