@@ -30,100 +30,65 @@ set (_example_jobs ex01/job01.sh ex02/job02.sh ex03/job03.sh ex04/job04.sh
 
 set (_all_jobs ${_animation_jobs} ${_example_jobs})
 
-include (ManageString)
+# List of output verbatime files for inclusion in LaTeX doc
+set (_examples_txt)
 
-# Convert scripts to verbatim text for inclusion in TeX documentation
-macro (script_to_verbatim)
-		grep ("[$]Id:|functions[.]sh" _file_content ${script} INVERT)
-		string (REPLACE ";" "\n" _file_content "${_file_content}")
-		string_unescape (_verbatim_txt "${_file_content}" NOESCAPE_SEMICOLON)
-		get_filename_component (_verbatim_file ${script} NAME_WE)
-		if (_verbatim_file MATCHES anim)
-			string (REGEX REPLACE ".+_([0-9][0-9][a-z]?)$" "anim_\\1.txt"
-				_verbatim_file ${_verbatim_file})
-		else (_verbatim_file MATCHES anim)
-			string (REGEX REPLACE "job([0-9][0-9][a-z]?)$" "example_\\1.txt"
-				_verbatim_file ${_verbatim_file})
-		endif (_verbatim_file MATCHES anim)
-		file (WRITE ${_verbatim_file} "${_verbatim_txt}")
-endmacro (script_to_verbatim)
+foreach (_script ${_all_jobs})
+	get_filename_component (_txt ${_script} NAME_WE)
+	if (_txt MATCHES anim)
+		string (REGEX REPLACE ".+_([0-9][0-9][a-z]?)$" "anim_\\1.txt"
+			_txt ${_txt})
+	else (_txt MATCHES anim)
+		string (REGEX REPLACE "job([0-9][0-9][a-z]?)$" "example_\\1.txt"
+			_txt ${_txt})
+	endif (_txt MATCHES anim)
+	list (APPEND _examples_txt ${GMT_BINARY_DIR}/doc/scripts/${_txt})
 
-macro (SETUP)
-	# List of output verbatime files for inclusion in LaTeX doc
-	set (_examples_txt)
+# Add command that triggers generator macro when output does not exist
+	add_custom_command (OUTPUT ${GMT_BINARY_DIR}/doc/scripts/${_txt}
+		COMMAND ${CMAKE_COMMAND}
+		-D script=${CMAKE_CURRENT_SOURCE_DIR}/${_script}
+		-D txt=${GMT_BINARY_DIR}/doc/scripts/${_txt}
+		-D nostrip=TRUE
+		-D CMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}
+		-P ${CMAKE_MODULE_PATH}/ScriptToVerbatim.cmake
+		WORKING_DIRECTORY ${GMT_BINARY_DIR}/doc/scripts
+		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${_script} ${CMAKE_MODULE_PATH}/ScriptToVerbatim.cmake)
+endforeach (_script ${_animation_jobs} ${_example_jobs})
 
-	foreach (_script ${_animation_jobs} ${_example_jobs})
-		get_filename_component (_verbatim_file ${_script} NAME_WE)
-		if (_verbatim_file MATCHES anim)
-			string (REGEX REPLACE ".+_([0-9][0-9][a-z]?)$" "anim_\\1.txt"
-				_verbatim_file ${_verbatim_file})
-		else (_verbatim_file MATCHES anim)
-			string (REGEX REPLACE "job([0-9][0-9][a-z]?)$" "example_\\1.txt"
-				_verbatim_file ${_verbatim_file})
-		endif (_verbatim_file MATCHES anim)
-		list (APPEND _examples_txt ${GMT_BINARY_DIR}/doc/scripts/${_verbatim_file})
+add_custom_target (examples_txt DEPENDS ${_examples_txt})
 
-	# Add command that triggers generator macro when output does not exist
-		add_custom_command (OUTPUT ${GMT_BINARY_DIR}/doc/scripts/${_verbatim_file}
-			COMMAND ${CMAKE_COMMAND}
-			-D EXAMPLES_COMMAND=script_to_verbatim
-			-D script=${CMAKE_CURRENT_SOURCE_DIR}/${_script}
-			-D CMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}
-			-P ${CMAKE_CURRENT_LIST_FILE}
-			WORKING_DIRECTORY ${GMT_BINARY_DIR}/doc/scripts
-			DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${_script})
-	endforeach (_script ${_animation_jobs} ${_example_jobs})
+# run examples (test)
+if (DO_EXAMPLES) # AND UNIX)
+	# this file takes care of setting up the test environment
+	configure_file (functions.sh.cmake functions.sh @ONLY)
 
-	add_custom_target (examples_txt DEPENDS ${_examples_txt})
+	# Workaround cmake bug 3957: CRLF line ending
+	find_package (UnixCommands)
+	if (CYGWIN_INSTALL_PATH)
+		find_program (D2U d2u
+			${CYGWIN_INSTALL_PATH}/bin)
+		execute_process (COMMAND ${D2U}
+			${CMAKE_CURRENT_BINARY_DIR}/functions.sh)
+	endif (CYGWIN_INSTALL_PATH)
 
-	# run examples (test)
-	if (DO_EXAMPLES) # AND UNIX)
-		# this file takes care of setting up the test environment
-		configure_file (functions.sh.cmake functions.sh @ONLY)
-
-		# Workaround cmake bug 3957: CRLF line ending
-		find_package (UnixCommands)
-		if (CYGWIN_INSTALL_PATH)
-			find_program (D2U d2u
-				${CYGWIN_INSTALL_PATH}/bin)
-			execute_process (COMMAND ${D2U}
-				${CMAKE_CURRENT_BINARY_DIR}/functions.sh)
-		endif (CYGWIN_INSTALL_PATH)
-
-		foreach (_job ${_all_jobs})
-			get_filename_component (_job_path
-				${CMAKE_CURRENT_BINARY_DIR}/${_job} PATH)
-			add_test (NAME ${_job}
-				WORKING_DIRECTORY ${_job_path}
-				COMMAND bash ${CMAKE_CURRENT_BINARY_DIR}/${_job})
-		endforeach (_job)
-	elseif (DO_EXAMPLES_WIN_BATCH_DISABLED) # (DO_EXAMPLES AND WIN32)
-		# only supporting examples with installed GMT in %path%
-		string (REPLACE ".sh" ".bat" _example_jobs_win "${_example_jobs}")
-		foreach (_job ${_example_jobs_win})
-			get_filename_component (_job_path
-				${CMAKE_CURRENT_BINARY_DIR}/${_job} PATH)
-			add_test (NAME ${_job}
-				WORKING_DIRECTORY ${_job_path}
-				COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${_job})
-		endforeach (_job)
-	endif (DO_EXAMPLES) # AND UNIX)
-endmacro (SETUP)
-
-# Get something done
-if (EXAMPLES_COMMAND)
-	set (_command_handled)
-	if (${EXAMPLES_COMMAND} STREQUAL script_to_verbatim)
-		script_to_verbatim ()
-		set (_command_handled TRUE)
-	endif (${EXAMPLES_COMMAND} STREQUAL script_to_verbatim)
-
-	if (NOT _command_handled)
-		message (SEND_ERROR "Unknown command: ${EXAMPLES_COMMAND}")
-	endif (NOT _command_handled)
-else (EXAMPLES_COMMAND)
-	# Must be part of the actual configure (included from CMakeLists.txt).
-	SETUP ()
-endif (EXAMPLES_COMMAND)
+	foreach (_job ${_all_jobs})
+		get_filename_component (_job_path
+			${CMAKE_CURRENT_BINARY_DIR}/${_job} PATH)
+		add_test (NAME ${_job}
+			WORKING_DIRECTORY ${_job_path}
+			COMMAND bash ${CMAKE_CURRENT_BINARY_DIR}/${_job})
+	endforeach (_job)
+elseif (DO_EXAMPLES_WIN_BATCH_DISABLED) # (DO_EXAMPLES AND WIN32)
+	# only supporting examples with installed GMT in %path%
+	string (REPLACE ".sh" ".bat" _example_jobs_win "${_example_jobs}")
+	foreach (_job ${_example_jobs_win})
+		get_filename_component (_job_path
+			${CMAKE_CURRENT_BINARY_DIR}/${_job} PATH)
+		add_test (NAME ${_job}
+			WORKING_DIRECTORY ${_job_path}
+			COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${_job})
+	endforeach (_job)
+endif (DO_EXAMPLES) # AND UNIX)
 
 # vim: textwidth=78 noexpandtab tabstop=2 softtabstop=2 shiftwidth=2
